# rustnlp

./: Cargo.toml  README.md
benches/: bench.rs  lipsum.txt
rustnlpjava/: .gitignore  libconf.toml  librustnlp.dylib  pom.xml
rustnlpjava/src/jmh/java/dev/gigapixel/rustnlp/: RustnlpBench.java
rustnlpjava/src/main/java/dev/gigapixel/rustnlp/: BoxErr.java  EncodeResult.java  Lib.java  PairSeq.java  Stem.java  Strings.java  Strr.java  Tok.java  TokRes.java  TokenSpan.java
rustnlpjava/src/main/java/dev/gigapixel/rustnlp/ntv/: DiplomatBoolArray.java  DiplomatBoolView.java  DiplomatBoolViewMut.java  DiplomatCharArray.java  (+68 more)
rustnlpjs/: .gitignore  README.md  Tok.d.ts  Tok.mjs  TokRes.d.ts  TokRes.mjs  bench.js  bench.ts  bun.lockb  diplomat.config.mjs  index.d.ts  index.mjs  main.bak.js  main.js  main.ts  package-lock.json  package.json  tsconfig.json
rustnlpjs/api/: BoxErr.d.ts  BoxErr.mjs  EncodeResult.d.ts  EncodeResult.mjs  PairSeq.d.ts  PairSeq.mjs  Stem.d.ts  Stem.mjs  Strings.d.ts  Strings.mjs  Strr.d.ts  Strr.mjs  Tok.d.ts  Tok.mjs  TokRes.d.ts  TokRes.mjs  TokenSpan.d.ts  TokenSpan.mjs  diplomat-wasm.mjs  index.d.ts  index.mjs  rustnlp.js  rustnlp_bg.js  rustnlp_bg.wasm.d.ts
rustnlpjs/bench/: index.js
rustnlpkotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
rustnlpkotlin/src/jmh/kotlin/dev/gigapixel/rustnlp/: BenchOffsetsVsStrings.kt
rustnlpkotlin/src/main/kotlin/dev/gigapixel/rustnlp/: BoxErr.kt  EncodeResult.kt  Lib.kt  PairSeq.kt  Stem.kt  Strings.kt  Strr.kt  Tok.kt  TokRes.kt  TokenSpan.kt
src/: lib.rs  tokenizer.json
